fixed heights on mobile

--- a/src/pages/home/Chatbot.css
+++ b/src/pages/home/Chatbot.css
@@ -180,7 +180,7 @@
   .chatbot-container {
     outline: 1px solid green;
     width: 99%;
-    height: 17.25em;
+    height: 60dvh;
     margin: 0 auto;
     mask-image: radial-gradient(circle at center, black 55%, transparent 80%);
   }
