--- a/src/pages/home/LottieCentered.css
+++ b/src/pages/home/LottieCentered.css
@@ -12,7 +12,7 @@
   border-radius: 50%;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
   width: 500px;
-  height: 500px;
+  height: 60dvh;
   overflow: hidden;
   position: relative;
 }
